# HS

./: Makefile.am  configure.ac
src/: Makefile.am
src/ast/: Makefile.am
src/lexer/: Makefile.am
src/parser/: Makefile.am
